tests/baselines/reference/computedPropertyNames9.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames9.ts(9,5): error TS2463: A computed property name must be of type 'string', 'number', or 'any'.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames9.ts (1 errors) ====
    function f(s: string): string;
    function f(n: number): number;
    function f<T>(x: T): T;
    function f(x): any { }
    
    var v = {
        [f("")]: 0,
        [f(0)]: 0,
        [f(true)]: 0
        ~~~~~~~~~
!!! error TS2463: A computed property name must be of type 'string', 'number', or 'any'.
    }